[package]
name = "crete"
version = "0.9.0"
edition = "2021"
license = "MIT"
categories = ["rust-patterns"]
keywords = ["store", "state", "proc-macro", "proc_macro"]
description = "Ergonomic, thread-safe & flexible state management."
authors = ["John Kapolos <nospamplease@kapolos.com>"]
repository = "https://github.com/kapolos/crete"

[dependencies]
syn = { version = "2.0.100", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.94"
convert_case = "0.8.0"

[lib]
proc-macro = true
